--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
   <script src="https://www.gstatic.com/firebasejs/9.21.0/firebase-firestore-compat.js"></script>
 </head>
 <body>
-  <header><h1>Vision Journal</h1></header>
+  <header class="card">
+    <h1>Vision Journal</h1>
+    <!-- Global Public Feed button -->
+    <button id="view-feed-header">Public Feed</button>
+  </header>
 
   <!-- Login / Sign-Up Form -->
   <div id="login-screen" class="card">
@@ -20,7 +24,6 @@
     <input type="password" id="password" placeholder="Password" />
     <button id="signup">Sign Up</button>
     <button id="login">Log In</button>
-    <button id="view-feed">View Public Feed</button>
     <p id="login-msg"></p>
   </div>
 
@@ -32,9 +35,9 @@
   </div>
 
   <!-- Journal Screen -->
-  <div id="journal-screen" class="hidden">
+  <div id="journal-screen" class="card hidden">
     <button id="logout">Logout</button>
-    <section class="card">
+    <section>
       <h2>New Entry</h2>
       <select id="type">
         <option value="dream">Dream</option>
@@ -48,14 +51,14 @@
       <button id="save-entry">Save</button>
       <p id="entry-msg"></p>
     </section>
-    <section class="card">
+    <section>
       <h2>My Journal</h2>
       <ul id="entries"></ul>
     </section>
   </div>
 
   <script>
-    // Your Firebase config
+    // Firebase config
     const firebaseConfig = {
       apiKey: "AIzaSyD3cdFU4K-LiPtkbVcQMmNp1701dvOEFW8",
       authDomain: "vision-journal-proto.firebaseapp.com",
@@ -68,7 +71,8 @@
     const auth = firebase.auth();
     const db   = firebase.firestore();
 
-    // UI elements
+    // UI references
+    const headerFeedBtn  = document.getElementById('view-feed-header');
     const loginScreen    = document.getElementById('login-screen');
     const feedScreen     = document.getElementById('feed-screen');
     const journalScreen  = document.getElementById('journal-screen');
@@ -77,31 +81,24 @@
     const passwordInput  = document.getElementById('password');
     const signupBtn      = document.getElementById('signup');
     const loginBtn       = document.getElementById('login');
-    const viewFeedBtn    = document.getElementById('view-feed');
-    const backFromFeedBtn= document.getElementById('back-from-feed');
+    const backFromFeed   = document.getElementById('back-from-feed');
     const logoutBtn      = document.getElementById('logout');
 
-    // Sign Up
-    signupBtn.onclick = () => {
-      const email = emailInput.value;
-      const pw    = passwordInput.value;
-      auth.createUserWithEmailAndPassword(email, pw)
-        .catch(err => loginMsg.textContent = err.message);
-    };
+    // Sign up & log in
+    signupBtn.onclick = () =>
+      auth.createUserWithEmailAndPassword(emailInput.value, passwordInput.value)
+        .catch(e => loginMsg.textContent = e.message);
 
-    // Log In
-    loginBtn.onclick = () => {
-      const email = emailInput.value;
-      const pw    = passwordInput.value;
-      auth.signInWithEmailAndPassword(email, pw)
-        .catch(err => loginMsg.textContent = err.message);
-    };
+    loginBtn.onclick = () =>
+      auth.signInWithEmailAndPassword(emailInput.value, passwordInput.value)
+        .catch(e => loginMsg.textContent = e.message);
 
-    // Auth state listener
+    // Auth state UI switch
     auth.onAuthStateChanged(user => {
       if (user) {
         loginScreen.classList.add('hidden');
         journalScreen.classList.remove('hidden');
+        feedScreen.classList.add('hidden');
         loadEntries();
       } else {
         loginScreen.classList.remove('hidden');
@@ -118,34 +115,26 @@
                         .split(',').map(s=>s.trim()).filter(Boolean);
       const isPublic = document.getElementById('isPublic').checked;
 
-      db.collection('visions')
-        .doc(auth.currentUser.uid)
-        .collection('entries')
-        .add({
+      db.collection('visions').doc(auth.currentUser.uid)
+        .collection('entries').add({
           userId: auth.currentUser.uid,
-          type,
-          text,
-          tags,
-          isPublic,
+          type, text, tags, isPublic,
           isFulfilled: false,
           createdAt: firebase.firestore.FieldValue.serverTimestamp()
         })
-        .then(() => {
+        .then(() => { 
           document.getElementById('entry-msg').textContent = 'Saved!';
           loadEntries();
         })
-        .catch(err => document.getElementById('entry-msg').textContent = 'Save failed.');
+        .catch(() => document.getElementById('entry-msg').textContent = 'Save failed.');
     };
 
-    // Load this user’s entries
+    // Load personal entries
     function loadEntries() {
       const list = document.getElementById('entries');
       list.innerHTML = '';
-      db.collection('visions')
-        .doc(auth.currentUser.uid)
-        .collection('entries')
-        .orderBy('createdAt','desc')
-        .get()
+      db.collection('visions').doc(auth.currentUser.uid)
+        .collection('entries').orderBy('createdAt','desc').get()
         .then(snap => {
           snap.forEach(doc => {
             const li = document.createElement('li');
@@ -155,37 +144,39 @@
         });
     }
 
-    // Public Feed button
-    viewFeedBtn.onclick = () => {
+    // Load public feed (always limit to 10 for guests, unlimited for logged-in)
+    function loadPublicFeed() {
+      const list = document.getElementById('feed-entries');
+      list.innerHTML = '';
+      let q = db.collectionGroup('entries')
+                .where('isPublic','==',true)
+                .orderBy('createdAt','desc');
+      if (!auth.currentUser) q = q.limit(10);
+      q.get().then(snap => {
+        snap.forEach(doc => {
+          const data = doc.data();
+          const li = document.createElement('li');
+          li.textContent = `${data.type}: ${data.text}`;
+          list.append(li);
+        });
+        if (!list.children.length) list.innerHTML = '<p>No public entries.</p>';
+      });
+    }
+
+    // Header “Public Feed”
+    headerFeedBtn.onclick = () => {
       loginScreen.classList.add('hidden');
       journalScreen.classList.add('hidden');
       feedScreen.classList.remove('hidden');
       loadPublicFeed();
     };
 
-    // Back from feed
-    backFromFeedBtn.onclick = () => {
+    // Back button
+    backFromFeed.onclick = () => {
       feedScreen.classList.add('hidden');
-      loginScreen.classList.remove('hidden');
+      if (auth.currentUser) journalScreen.classList.remove('hidden');
+      else loginScreen.classList.remove('hidden');
     };
-
-    // Load public entries
-    function loadPublicFeed() {
-      const list = document.getElementById('feed-entries');
-      list.innerHTML = '';
-      db.collectionGroup('entries')
-        .where('isPublic','==',true)
-        .orderBy('createdAt','desc')
-        .get()
-        .then(snap => {
-          snap.forEach(doc => {
-            const data = doc.data();
-            const li = document.createElement('li');
-            li.textContent = `${data.type}: ${data.text}`;
-            list.append(li);
-          });
-        });
-    }
 
     // Logout
     logoutBtn.onclick = () => auth.signOut();
