--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Vision Journal</title>
   <link rel="stylesheet" href="style.css" />
-  <!-- Firebase (compat SDK) -->
   <script src="https://www.gstatic.com/firebasejs/9.21.0/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.21.0/firebase-auth-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.21.0/firebase-firestore-compat.js"></script>
@@ -15,11 +14,12 @@
     <h1>Vision Journal</h1>
   </header>
 
+  <!-- TWO-COLUMN LAYOUT -->
   <div id="layout" class="layout">
-    <!-- Left: Login or Journal -->
-    <main id="main-content" class="card">
-      <!-- Login Screen -->
-      <div id="login-screen">
+    <!-- LEFT COLUMN: Login or Journal -->
+    <main id="main-content">
+      <!-- Login Form -->
+      <div id="login-screen" class="card">
         <h2>Sign Up or Log In</h2>
         <input type="email" id="email" placeholder="you@example.com" />
         <input type="password" id="password" placeholder="Password" />
@@ -29,7 +29,7 @@
       </div>
 
       <!-- Journal Screen -->
-      <div id="journal-screen" class="hidden">
+      <div id="journal-screen" class="card hidden">
         <button id="logout">Logout</button>
         <section>
           <h2>New Entry</h2>
@@ -41,10 +41,7 @@
           </select>
           <textarea id="text" placeholder="Describe..."></textarea>
           <input id="tags" placeholder="tags, comma-separated" />
-          <label>
-            <input type="checkbox" id="isPublic" />
-            Make Public
-          </label>
+          <label><input type="checkbox" id="isPublic" /> Make Public</label>
           <button id="save-entry">Save</button>
           <p id="entry-msg"></p>
         </section>
@@ -55,7 +52,7 @@
       </div>
     </main>
 
-    <!-- Right: Public Feed -->
+    <!-- RIGHT COLUMN: Public Feed -->
     <aside id="feed-screen" class="card">
       <h2>Public Feed</h2>
       <ul id="feed-entries"></ul>
@@ -63,7 +60,7 @@
   </div>
 
   <script>
-    // Firebase config
+    // Firebase init
     const firebaseConfig = {
       apiKey: "AIzaSyD3cdFU4K-LiPtkbVcQMmNp1701dvOEFW8",
       authDomain: "vision-journal-proto.firebaseapp.com",
@@ -76,11 +73,11 @@
     const auth = firebase.auth();
     const db   = firebase.firestore();
 
-    // Elements
+    // UI elements
     const loginScreen   = document.getElementById('login-screen');
     const journalScreen = document.getElementById('journal-screen');
-    const feedEntries   = document.getElementById('feed-entries');
     const entriesList   = document.getElementById('entries');
+    const feedEntries   = document.getElementById('feed-entries');
     const loginMsg      = document.getElementById('login-msg');
     const emailInput    = document.getElementById('email');
     const passwordInput = document.getElementById('password');
@@ -89,18 +86,16 @@
     const logoutBtn     = document.getElementById('logout');
     const saveBtn       = document.getElementById('save-entry');
 
-    // Sign up
-    signupBtn.onclick = () => {
+    // Sign up / Log in
+    signupBtn.onclick = () =>
       auth.createUserWithEmailAndPassword(emailInput.value, passwordInput.value)
-        .catch(e => loginMsg.textContent = e.message);
-    };
-    // Log in
-    loginBtn.onclick = () => {
-      auth.signInWithEmailAndPassword(emailInput.value, passwordInput.value)
-        .catch(e => loginMsg.textContent = e.message);
-    };
+          .catch(e => loginMsg.textContent = e.message);
 
-    // Auth state → toggle login/journal, always show feed
+    loginBtn.onclick = () =>
+      auth.signInWithEmailAndPassword(emailInput.value, passwordInput.value)
+          .catch(e => loginMsg.textContent = e.message);
+
+    // Auth state listener
     auth.onAuthStateChanged(user => {
       if (user) {
         loginScreen.classList.add('hidden');
@@ -110,13 +105,13 @@
         loginScreen.classList.remove('hidden');
         journalScreen.classList.add('hidden');
       }
-      loadPublicFeed();  // refresh feed whenever auth changes
+      loadPublicFeed();  // always refresh feed
     });
 
     // Logout
     logoutBtn.onclick = () => auth.signOut();
 
-    // Save new entry
+    // Save entry
     saveBtn.onclick = () => {
       const type     = document.getElementById('type').value;
       const text     = document.getElementById('text').value;
@@ -124,10 +119,8 @@
                         .split(',').map(s=>s.trim()).filter(Boolean);
       const isPublic = document.getElementById('isPublic').checked;
 
-      db.collection('visions')
-        .doc(auth.currentUser.uid)
-        .collection('entries')
-        .add({
+      db.collection('visions').doc(auth.currentUser.uid)
+        .collection('entries').add({
           userId: auth.currentUser.uid,
           type, text, tags, isPublic,
           isFulfilled: false,
@@ -142,14 +135,11 @@
         });
     };
 
-    // Load personal entries
+    // Load personal journal
     function loadJournal() {
       entriesList.innerHTML = '';
-      db.collection('visions')
-        .doc(auth.currentUser.uid)
-        .collection('entries')
-        .orderBy('createdAt','desc')
-        .get()
+      db.collection('visions').doc(auth.currentUser.uid)
+        .collection('entries').orderBy('createdAt','desc').get()
         .then(snap => {
           snap.forEach(d => {
             const li = document.createElement('li');
@@ -159,7 +149,7 @@
         });
     }
 
-    // Load public feed: latest 10 if guest, else unlimited
+    // Load public feed
     function loadPublicFeed() {
       feedEntries.innerHTML = '';
       let q = db.collectionGroup('entries')
@@ -178,7 +168,7 @@
       });
     }
 
-    // Initial load of feed
+    // Initial feed load
     loadPublicFeed();
   </script>
 </body>
