Restructure: Insights, New Entry & Journal in separate cards

--- a/index.html
+++ b/index.html
@@ -9,15 +9,18 @@
   <script src="https://www.gstatic.com/firebasejs/9.21.0/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.21.0/firebase-auth-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.21.0/firebase-firestore-compat.js"></script>
+  <!-- Chart.js for future heatmap -->
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
   <header class="card">
     <h1>Vision Journal</h1>
   </header>
 
-  <div id="layout" class="layout">
-    <!-- LEFT COLUMN -->
+  <div class="layout">
+    <!-- LEFT COLUMN: Login or Journal + Insights -->
     <main id="main-content">
+      <!-- Login Screen -->
       <div id="login-screen" class="card">
         <h2>Sign Up or Log In</h2>
         <input type="email" id="email" placeholder="you@example.com" />
@@ -27,8 +30,19 @@
         <p id="login-msg"></p>
       </div>
 
-      <div id="journal-screen" class="card hidden">
-        <section>
+      <!-- Journal + Insights -->
+      <div id="journal-screen" class="hidden">
+        <!-- Insights (Heatmap placeholder) -->
+        <div id="insights-box" class="card">
+          <h2>Insights</h2>
+          <canvas id="heatmapCanvas" width="300" height="200"></canvas>
+          <p style="text-align:center;font-size:0.9rem;color:#666;">
+            (Interactive globe-heatmap coming soon)
+          </p>
+        </div>
+
+        <!-- New Entry -->
+        <div id="new-entry-box" class="card">
           <h2>New Entry</h2>
           <select id="type">
             <option value="dream">Dream</option>
@@ -38,18 +52,23 @@
           </select>
           <textarea id="text" placeholder="Describe..."></textarea>
           <input id="tags" placeholder="tags, comma-separated" />
-          <label><input type="checkbox" id="isPublic" /> Make Public</label>
+          <label>
+            <input type="checkbox" id="isPublic" />
+            Make Public
+          </label>
           <button id="save-entry">Save</button>
           <p id="entry-msg"></p>
-        </section>
-        <section>
+        </div>
+
+        <!-- My Journal -->
+        <div id="journal-box" class="card">
           <h2>My Journal</h2>
           <ul id="entries"></ul>
-        </section>
+        </div>
       </div>
     </main>
 
-    <!-- RIGHT SIDEBAR -->
+    <!-- RIGHT SIDEBAR: Logout + Public Feed -->
     <aside id="feed-screen">
       <div id="logout-box" class="card hidden">
         <button id="logout">Logout</button>
@@ -76,18 +95,18 @@
     const db   = firebase.firestore();
 
     // Element refs
-    const loginScreen   = document.getElementById('login-screen');
-    const journalScreen = document.getElementById('journal-screen');
-    const entriesList   = document.getElementById('entries');
-    const feedEntries   = document.getElementById('feed-entries');
-    const logoutBox     = document.getElementById('logout-box');
-    const loginMsg      = document.getElementById('login-msg');
-    const emailInput    = document.getElementById('email');
-    const passwordInput = document.getElementById('password');
-    const signupBtn     = document.getElementById('signup');
-    const loginBtn      = document.getElementById('login');
-    const logoutBtn     = document.getElementById('logout');
-    const saveBtn       = document.getElementById('save-entry');
+    const loginScreen    = document.getElementById('login-screen');
+    const journalScreen  = document.getElementById('journal-screen');
+    const entriesList    = document.getElementById('entries');
+    const feedEntries    = document.getElementById('feed-entries');
+    const logoutBox      = document.getElementById('logout-box');
+    const loginMsg       = document.getElementById('login-msg');
+    const emailInput     = document.getElementById('email');
+    const passwordInput  = document.getElementById('password');
+    const signupBtn      = document.getElementById('signup');
+    const loginBtn       = document.getElementById('login');
+    const logoutBtn      = document.getElementById('logout');
+    const saveBtn        = document.getElementById('save-entry');
 
     // Sign up / Log in
     signupBtn.onclick = () =>
@@ -98,7 +117,7 @@
       auth.signInWithEmailAndPassword(emailInput.value, passwordInput.value)
           .catch(e => loginMsg.textContent = e.message);
 
-    // Auth‐state changes drive all UI & data loads
+    // Auth-state listener
     auth.onAuthStateChanged(user => {
       if (user) {
         loginScreen.classList.add('hidden');
@@ -110,14 +129,13 @@
         journalScreen.classList.add('hidden');
         logoutBox.classList.add('hidden');
       }
-      // ALWAYS load the feed once we know auth state
       loadPublicFeed();
     });
 
     // Logout
     logoutBtn.onclick = () => auth.signOut();
 
-    // Save new entry
+    // Save entry
     saveBtn.onclick = () => {
       const type     = document.getElementById('type').value;
       const text     = document.getElementById('text').value;
@@ -155,7 +173,7 @@
         });
     }
 
-    // Load public feed (limit 10 if no user)
+    // Load public feed
     function loadPublicFeed() {
       feedEntries.innerHTML = '';
       let q = db.collectionGroup('entries')
@@ -174,7 +192,17 @@
       });
     }
 
-    // ── **NO** initial loadPublicFeed() here ──
+    // --------- Placeholder Chart Setup ------------
+    // (We’ll wire real data here next time)
+    const ctx = document.getElementById('heatmapCanvas').getContext('2d');
+    new Chart(ctx, {
+      type: 'bar',
+      data: {
+        labels: ['dream','nightmare','daydream','insight'],
+        datasets: [{ label: 'Count', data: [0,0,0,0] }]
+      },
+      options: { responsive: true, maintainAspectRatio: false }
+    });
   </script>
 </body>
 </html>
