--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </header>
 
   <div class="layout">
-    <!-- LEFT COLUMN: Login or Journal + Insights -->
+    <!-- LEFT COLUMN -->
     <main id="main-content">
       <!-- Login Screen -->
       <div id="login-screen" class="card">
@@ -32,16 +32,16 @@
 
       <!-- Journal + Insights -->
       <div id="journal-screen" class="hidden">
-        <!-- Insights (Heatmap placeholder) -->
+        <!-- Insights -->
         <div id="insights-box" class="card">
           <h2>Insights</h2>
-          <canvas id="heatmapCanvas" width="300" height="200"></canvas>
+          <canvas id="heatmapCanvas" width="300" height="150"></canvas>
           <p style="text-align:center;font-size:0.9rem;color:#666;">
             (Interactive globe-heatmap coming soon)
           </p>
         </div>
 
-        <!-- New Entry -->
+        <!-- New Entry (with location) -->
         <div id="new-entry-box" class="card">
           <h2>New Entry</h2>
           <select id="type">
@@ -56,6 +56,15 @@
             <input type="checkbox" id="isPublic" />
             Make Public
           </label>
+
+          <!-- New location UI -->
+          <button id="detect-location">Detect My Location</button>
+          <p id="location-display" style="font-size:.9rem;color:#555;">
+            No location yet.
+          </p>
+          <input type="hidden" id="lat" />
+          <input type="hidden" id="lng" />
+
           <button id="save-entry">Save</button>
           <p id="entry-msg"></p>
         </div>
@@ -68,7 +77,7 @@
       </div>
     </main>
 
-    <!-- RIGHT SIDEBAR: Logout + Public Feed -->
+    <!-- RIGHT SIDEBAR -->
     <aside id="feed-screen">
       <div id="logout-box" class="card hidden">
         <button id="logout">Logout</button>
@@ -108,7 +117,7 @@
     const logoutBtn      = document.getElementById('logout');
     const saveBtn        = document.getElementById('save-entry');
 
-    // Sign up / Log in
+    // Sign up & log in
     signupBtn.onclick = () =>
       auth.createUserWithEmailAndPassword(emailInput.value, passwordInput.value)
           .catch(e => loginMsg.textContent = e.message);
@@ -135,18 +144,43 @@
     // Logout
     logoutBtn.onclick = () => auth.signOut();
 
-    // Save entry
+    // Geolocation: fill lat/lng when clicked
+    document.getElementById('detect-location').onclick = () => {
+      const display = document.getElementById('location-display');
+      if (!navigator.geolocation) {
+        display.textContent = 'Geolocation not supported.';
+        return;
+      }
+      display.textContent = 'Locating…';
+      navigator.geolocation.getCurrentPosition(
+        pos => {
+          const { latitude, longitude } = pos.coords;
+          document.getElementById('lat').value = latitude;
+          document.getElementById('lng').value = longitude;
+          display.textContent = `Lat: ${latitude.toFixed(5)}, Lng: ${longitude.toFixed(5)}`;
+        },
+        err => {
+          console.error(err);
+          display.textContent = 'Location failed: ' + err.message;
+        }
+      );
+    };
+
+    // Save new entry (with location)
     saveBtn.onclick = () => {
       const type     = document.getElementById('type').value;
       const text     = document.getElementById('text').value;
       const tags     = document.getElementById('tags').value
                         .split(',').map(s=>s.trim()).filter(Boolean);
       const isPublic = document.getElementById('isPublic').checked;
+      const lat      = parseFloat(document.getElementById('lat').value) || null;
+      const lng      = parseFloat(document.getElementById('lng').value) || null;
 
       db.collection('visions').doc(auth.currentUser.uid)
         .collection('entries').add({
           userId: auth.currentUser.uid,
           type, text, tags, isPublic,
+          location: { lat, lng },
           isFulfilled: false,
           createdAt: firebase.firestore.FieldValue.serverTimestamp()
         })
@@ -192,8 +226,7 @@
       });
     }
 
-    // --------- Placeholder Chart Setup ------------
-    // (We’ll wire real data here next time)
+    // Placeholder Chart setup
     const ctx = document.getElementById('heatmapCanvas').getContext('2d');
     new Chart(ctx, {
       type: 'bar',
