--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Vision Journal</title>
   <link rel="stylesheet" href="style.css" />
-  <!-- Firebase (compat SDK) -->
+  <!-- Firebase SDKs -->
   <script src="https://www.gstatic.com/firebasejs/9.21.0/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.21.0/firebase-auth-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.21.0/firebase-firestore-compat.js"></script>
-  <!-- Chart.js for future heatmap -->
+  <!-- Chart.js for heatmap placeholder -->
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
@@ -20,7 +20,7 @@
   <div class="layout">
     <!-- LEFT COLUMN -->
     <main id="main-content">
-      <!-- Login Screen -->
+      <!-- Login Form -->
       <div id="login-screen" class="card">
         <h2>Sign Up or Log In</h2>
         <input type="email" id="email" placeholder="you@example.com" />
@@ -41,7 +41,7 @@
           </p>
         </div>
 
-        <!-- New Entry (with location) -->
+        <!-- New Entry (with country/state) -->
         <div id="new-entry-box" class="card">
           <h2>New Entry</h2>
           <select id="type">
@@ -57,13 +57,17 @@
             Make Public
           </label>
 
-          <!-- New location UI -->
-          <button id="detect-location">Detect My Location</button>
+          <!-- Auto-detect via IP -->
+          <button id="detect-location">Detect My Country/State</button>
           <p id="location-display" style="font-size:.9rem;color:#555;">
-            No location yet.
+            (no location yet)
           </p>
-          <input type="hidden" id="lat" />
-          <input type="hidden" id="lng" />
+
+          <!-- Manual fallback fields -->
+          <div id="manual-location" class="hidden">
+            <input type="text" id="country-input" placeholder="Country (required)" />
+            <input type="text" id="state-input"   placeholder="State/Region (required)" />
+          </div>
 
           <button id="save-entry">Save</button>
           <p id="entry-msg"></p>
@@ -103,25 +107,29 @@
     const auth = firebase.auth();
     const db   = firebase.firestore();
 
-    // Element refs
-    const loginScreen    = document.getElementById('login-screen');
-    const journalScreen  = document.getElementById('journal-screen');
-    const entriesList    = document.getElementById('entries');
-    const feedEntries    = document.getElementById('feed-entries');
-    const logoutBox      = document.getElementById('logout-box');
-    const loginMsg       = document.getElementById('login-msg');
-    const emailInput     = document.getElementById('email');
-    const passwordInput  = document.getElementById('password');
-    const signupBtn      = document.getElementById('signup');
-    const loginBtn       = document.getElementById('login');
-    const logoutBtn      = document.getElementById('logout');
-    const saveBtn        = document.getElementById('save-entry');
+    // UI refs
+    const loginScreen   = document.getElementById('login-screen');
+    const journalScreen = document.getElementById('journal-screen');
+    const logoutBox     = document.getElementById('logout-box');
+    const loginMsg      = document.getElementById('login-msg');
+    const emailInput    = document.getElementById('email');
+    const passwordInput = document.getElementById('password');
+    const signupBtn     = document.getElementById('signup');
+    const loginBtn      = document.getElementById('login');
+    const logoutBtn     = document.getElementById('logout');
+    const saveBtn       = document.getElementById('save-entry');
+    const detectBtn     = document.getElementById('detect-location');
+    const locationDisp  = document.getElementById('location-display');
+    const manualDiv     = document.getElementById('manual-location');
+    const countryInput  = document.getElementById('country-input');
+    const stateInput    = document.getElementById('state-input');
+    const entriesList   = document.getElementById('entries');
+    const feedEntries   = document.getElementById('feed-entries');
 
-    // Sign up & log in
+    // Sign up / Log in
     signupBtn.onclick = () =>
       auth.createUserWithEmailAndPassword(emailInput.value, passwordInput.value)
           .catch(e => loginMsg.textContent = e.message);
-
     loginBtn.onclick = () =>
       auth.signInWithEmailAndPassword(emailInput.value, passwordInput.value)
           .catch(e => loginMsg.textContent = e.message);
@@ -144,43 +152,50 @@
     // Logout
     logoutBtn.onclick = () => auth.signOut();
 
-    // Geolocation: fill lat/lng when clicked
-    document.getElementById('detect-location').onclick = () => {
-      const display = document.getElementById('location-display');
-      if (!navigator.geolocation) {
-        display.textContent = 'Geolocation not supported.';
-        return;
-      }
-      display.textContent = 'Locating…';
-      navigator.geolocation.getCurrentPosition(
-        pos => {
-          const { latitude, longitude } = pos.coords;
-          document.getElementById('lat').value = latitude;
-          document.getElementById('lng').value = longitude;
-          display.textContent = `Lat: ${latitude.toFixed(5)}, Lng: ${longitude.toFixed(5)}`;
-        },
-        err => {
+    // Detect via IP lookup
+    detectBtn.onclick = () => {
+      locationDisp.textContent = 'Detecting…';
+      fetch('https://ipapi.co/json/')
+        .then(r => r.json())
+        .then(data => {
+          if (data.country_name && data.region) {
+            locationDisp.textContent = `${data.city || ''}, ${data.region}, ${data.country_name}`;
+            // store for save
+            countryInput.value = data.country_name;
+            stateInput.value   = data.region;
+            manualDiv.classList.add('hidden');
+          } else {
+            throw new Error('Incomplete data');
+          }
+        })
+        .catch(err => {
           console.error(err);
-          display.textContent = 'Location failed: ' + err.message;
-        }
-      );
+          locationDisp.textContent = 'Auto-detect failed. Please enter manually:';
+          manualDiv.classList.remove('hidden');
+        });
     };
 
-    // Save new entry (with location)
+    // Save entry with country/state
     saveBtn.onclick = () => {
       const type     = document.getElementById('type').value;
       const text     = document.getElementById('text').value;
       const tags     = document.getElementById('tags').value
                         .split(',').map(s=>s.trim()).filter(Boolean);
       const isPublic = document.getElementById('isPublic').checked;
-      const lat      = parseFloat(document.getElementById('lat').value) || null;
-      const lng      = parseFloat(document.getElementById('lng').value) || null;
+      const country  = countryInput.value.trim();
+      const state    = stateInput.value.trim();
+
+      // require country/state if none auto-detected
+      if (!country || !state) {
+        alert('Please detect your location or enter country and state.');
+        return;
+      }
 
       db.collection('visions').doc(auth.currentUser.uid)
         .collection('entries').add({
           userId: auth.currentUser.uid,
           type, text, tags, isPublic,
-          location: { lat, lng },
+          location: { country, state },
           isFulfilled: false,
           createdAt: firebase.firestore.FieldValue.serverTimestamp()
         })
@@ -218,24 +233,13 @@
         snap.forEach(d => {
           const e = d.data();
           const li = document.createElement('li');
-          li.textContent = `${e.type}: ${e.text}`;
+          li.textContent = `${e.type}: ${e.text} (${e.location.country}, ${e.location.state})`;
           feedEntries.append(li);
         });
         if (!feedEntries.children.length)
           feedEntries.innerHTML = '<p>No public entries.</p>';
       });
     }
-
-    // Placeholder Chart setup
-    const ctx = document.getElementById('heatmapCanvas').getContext('2d');
-    new Chart(ctx, {
-      type: 'bar',
-      data: {
-        labels: ['dream','nightmare','daydream','insight'],
-        datasets: [{ label: 'Count', data: [0,0,0,0] }]
-      },
-      options: { responsive: true, maintainAspectRatio: false }
-    });
   </script>
 </body>
 </html>
